rename & add install from pip

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = gpuinfo
+name = gpustatus
 version = 0.0.0
 author = ChenheGu
 long_description = file: Readme.md 
@@ -16,4 +16,4 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    gpuinfo = src.main:main
+    gpustatus = src.main:main
